typescript/checker/tests/conformance/expressions/unaryOperators/decrementOperator/decrementOperatorWithAnyOtherType.ts.stderr
error: NoNewSignature {
    span: Span {
        lo: BytePos(
            191,
        ),
        hi: BytePos(
            192,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/unaryOperators/decrementOperator/decrementOperatorWithAnyOtherType.ts:13:16
   |
13 | var objA = new A();
   |                ^

